# video-service

./: .gitignore  dump.rdb  main.py  pyproject.toml  routes.py
src/api/upload/: routes.py  service.py  tasks.py
src/aws/: dynamodb_client.py  s3_client.py
src/celery/: config.py
src/settings/: base.py  dev.py  dispatch.py  prod.py
src/settings/env/: .env.sample
